@@ -1,7 +1,15 @@
 Changes in 1.1.31.2:
+  o Server changes:
+    * Added EntitlementTimeout exception to notify clients that an
+      entitlement has timed out from the authentication cache (CNY-1862)
+
   o Proxy changes:
     * Proxy can now inject entitlements and user authentication on behalf
       of clients (CNY-1836)
+
+  o Client changes:
+    * Reread entitlements from disk when EntitlementTimeout is received
+      (CNY-1862)
 
 Changes in 1.1.31.1:
   o Bug Fix:
